...
                            Icon(imageVector = Icons.Outlined.Settings, contentDescription = null)
                        }
                    )
                }

                UiState.HomeStatus.Loading -> item {
                    CircularProgressIndicator(modifier = Modifier.testTag("loading"))
                }
            }

            item {
                Row(
                    horizontalArrangement = Arrangement.spacedBy(8.dp)
...
        onStartExercise: (ExerciseType) -> Unit
    ) {
        item {
            val permissionsManager = PermissionsManager.Local.current
            val hasPermissions by permissionsManager.isGranted(PermissionCategory.INDOOR_RUN)
            ExerciseChip(
                text = "Indoor run",
                icon = Icons.Outlined.FitnessCenter,
                hasPermissions = hasPermissions,
                onRequestPermissions = {
                    permissionsManager.requestCategory(PermissionCategory.INDOOR_RUN)
                },
                onStart = { onStartExercise(ExerciseType.IndoorRun) }
...
